// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpText renders the component 1`] = `
.emotion-0 {
  display: block;
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<p
  class="emotion-0"
  data-test-id="cf-ui-help-text"
>
  Lorem Ipsum dolor sit amet
</p>
`;

exports[`HelpText renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<p
  class="my-extra-class emotion-0"
  data-test-id="cf-ui-help-text"
>
  Lorem Ipsum dolor sit amet
</p>
`;
